--- a/style.css
+++ b/style.css
@@ -1,28 +1,25 @@
 body {
     padding-top: 800px;
     margin: 0;
+    text-align: center;
 }
 
 .profile {
-    width: 175px;
-    margin-bottom: 50px;
     border-radius: 50%;
+    height: 400px;
+    width: 300px;
 }
 
 #welcome {
     position: absolute;
-    height: 800px;
     color: #FFFFFF;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    right: 0;
     opacity: 0.83;
     background: linear-gradient(#16ab8b, #27ae60 100%);
     display: table;
     width: 100%;
     height: 100%;
     z-index: 1;
+    bottom: 0;
 }
 
 #name {
@@ -52,7 +49,7 @@ h2 {
 .line {
     height: 6px;
     background-color: black;
-    width: 65px;
+    width: 100px;
     margin: 8px auto;
 }
 p {
@@ -68,23 +65,54 @@ p {
     vertical-align: middle;
 }
 .menu {
-    list-style: none;
     z-index: 2;
     font-family: 'Cinzel Decorative', cursive;
-    position: absolute;
-    top: 10px;
-    right: 30px;
-    cursor: pointer;
+    position: fixed;
+    top: 0px;
+    margin-top: 0px;
+    background: white;
+    width: 100% 
 }
 .link {
-    float: left;
-    color: white;
+    color: skyblue;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
     font-size: 20px;
+    display: inline;
 }
 .link:hover {
-    background-color: darkblue;
+    background-color: chartreuse;
+    font-size: 25px;
+    text-decoration: underline;
+}
+a {
+    text-decoration: none;
+    color: aquamarine;
+    text-shadow: 2px 2px gainsboro;
+}
+.article:hover {
+    color: coral;
+}
+html {
+    scroll-behavior: smooth;
+}
+#writing a {
+    text-decoration: underline !important;
+    color: blue !important;
+    text-shadow: none !important;
+}
+#contact {
+    background-color: darkseagreen;
+}
+#contact iframe {
+    width: 100%;
+}
+.contacts_1 h3 {
+    display: inline;
+}
+#contact a {
+    color: aquamarine;
+    text-shadow: none;
 }
